Fixes janky medal alignment

--- a/app/assets/stylesheets/leaderboards.scss
+++ b/app/assets/stylesheets/leaderboards.scss
@@ -19,8 +19,10 @@
 .top-medals {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .top-medal {
-  flex: 1 1 auto;
+  flex: 1 1 0;
+  min-width: 100px;
 }
